# daq-config-server

./: .codecov.yml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  catalog-info.yaml  dev-values.yaml  k8s-config-dev.yaml  k8s-config.yaml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  run.sh  switcher.json  whitelist.yaml
.github/: CONTRIBUTING.md
.github/workflows/: _container.yml  _docs.yml  _test.yml  _test_system.yml  backend_ci.yml  ci.yml  gui_ci.yml
chart/: Chart.yaml  app.yaml  dev-values.yaml  values.yaml  whitelist.yaml
chart/templates/: deployment.yaml  ingress.yaml  service.yaml  whitelist.yaml
deployment/: build_and_push.sh  build_and_push_all.sh
docs/: conf.py  index.md
docs/explanations/: whitelist_info.md
docs/how-to/: config-server-guide.md  release-and-deploy.md
docs/reference/: current_and_planned_features.md
gui/config-server-gui/: Dockerfile  build_container.sh  package-lock.json  package.json
helm/daq-config-server/: Chart.yaml  converter_map.yaml  values.yaml  whitelist.yaml
helmchart/: Chart.yaml  values.yaml
helmchart/templates/: NOTES.txt  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  storage.yaml
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
main/.doctrees/: _api.doctree  explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
main/_api/: daq_config_server.html
main/_modules/: index.html
main/_sources/: _api.rst.txt  reference.md.txt
main/_static/: documentation_options.js
main/explanations/: decisions.html  whitelist_info.html
main/how-to/: config-server-guide.html  contribute.html  release-and-deploy.html  run-container.html
main/reference/: current_and_planned_features.html
main/tutorials/: installation.html
src/config_service/: __init__.py  __main__.py  app.py  beamline_parameters.py  client.py  constants.py
src/daq_config_server/: __init__.py  __main__.py  app.py  beamline_parameters.py  client.py  config.py  constants.py  converters.py  log.py  whitelist.py  whitelist.yaml
tests/: conftest.py  constants.py  test_api.py  test_cli.py  test_client.py  test_graphql.py
tests/system_tests/: test_client.py
tests/test_data/: bad_beamline_parameters.txt  beamline_parameters.txt  test_bad_display_1.configuration  test_bad_display_2.configuration  test_bad_display_3.configuration  test_bad_json  test_bad_lut.txt  test_config.yaml  test_converter_map.yaml  test_display.configuration  test_good_beamline_pitch_lut.txt  test_good_beamline_roll_lut.txt  test_good_detector_xy_lut.txt  test_good_i09_hu_undulator_gap_lut.txt  test_good_json.json  test_good_lut.txt  test_hyperion_domain.properties  test_i04_domain.properties  test_logging_config.yaml  test_xml.xml  whitelist.yaml
tests/unit_tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_converters.py  test_log.py  test_main.py  test_whitelist.py
v0.2.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
v0.2.0/.doctrees/: how-to.doctree
v0.2.0/_api/: daq_config_server.html
v0.2.0/explanations/: decisions.html
v0.2.0/how-to/: contribute.html  run-container.html
v0.2.0/tutorials/: installation.html
v1.0.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.0.0-rc.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.0.0-rc.1/.doctrees/: index.doctree
v1.0.0-rc.1/_api/: daq_config_server.html
v1.0.0-rc.1/explanations/: decisions.html  (+1 more)
v1.0.0-rc.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.1.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.1.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.1.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.2.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
v1.3.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
v1.3.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.3.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
v1.3.3/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.3.4/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.3.5/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
v1.3.6/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
valkey/: Dockerfile  valkey.conf
(+350 files in other folders)
